<resources>
    <string name="app_name">appHola</string>
    <!--Hola-->
    <string name="strtitulo">Primer Aplicación Móvil </string>
    <string name="strtunombre">¿Cuál es tu nombre?</string>>
    <string name="strpulsar">Dar click</string>
    <string name="strlimpiar">Limpiar</string>
    <string name="strcerrar">Cerrar</string>
    <string name="strsalir">Salir</string>

    <!--Info del estudiante-->
    <string name="nombreEmpresa">SERVICIOS INFORMATICOS</string>
    <string name="materia">Programación Móvil</string>
    <string name="alumno">Julián Aguilar</string>
    <string name="matricula">2023030573</string>

    <!--Menu apps-->
    <string name="strhola">Hola</string>
    <string name="strIMC">Cálculo IMC</string>
    <string name="strgrdps">Grados</string>
    <string name="strcotizacion">Cotización</string>
    <string name="strspinner">Spinner</string>
    <string name="strMonedas">Monedas</string>
    <string name="strspre1">Preexamen 1</string>
    <string name="strspre2">Preexamen 2</string>
    <string name="examen">EXAMEN</string>

    <!--IMC-->
    <string name="strCalcular">Calcular</string>
    <string name="strAltura">Altura Ej. 1.80</string>
    <string name="strPeso">Peso Ej. 90.5</string>
    <string name="strResultado">Su resultado aqui</string>


    <!--grados-->
    <string name="strCel">Celcius a Fahrenheit</string>
    <string name="strFah">Fahrenheit a Celcius</string>
    <string name="strGrados">Grados</string>
    <string name="strCantidad">Cantidad</string>
    <string name="strMensaje">Falto capturar cantidad</string>

    <!--app monedas-->
    <string-array name="monedas">
        <item>Dolar Americano</item>
        <item>Dolar Canadiense</item>
        <item>Euro</item>
        <item>Libra Esterlinas</item>
    </string-array>
    <string name="dolarA">17.40</string>
    <string name="dolarc">18.50</string>
    <string name="euro">21.45</string>
    <string name="libra">22.18</string>
    <string name="strTituloMoneda">Convertidor de Monedas</string>
    <string name="strCantidadP">Cantidad de pesos</string>
    <string name="strBtnConvertir">Convertir</string>

    <!--app Operaciones-->
    <string-array name="operaciones">
        <item>Selecciona una opción</item>
        <item>suma</item>
        <item>resta</item>
        <item>multiplicacion</item>
        <item>division</item>
    </string-array>
    <string name="strTituloOP">Operaciones Básicas</string>
    <string name="strnum1">Ingrese número 1</string>
    <string name="strnum2">Ingrese número 2</string>
    <string name="strresultado">Resultado:</string>


    <!--App Cotizacion-->
    <string name="domicilio">Av Joaquin Escobar 9401</string>
    <string name="ciudad">Mazatlan Sinaloa</string>
    <string name="marca">Toyota</string>
    <string name="cliente">Nombre del Cliente</string>
    <string name="folio">Num. Folio</string>
    <string name="des">Descripcion del Automovil</string>
    <string name="precio">Valor del automovil</string>
    <string name="po">Porcentaje de pago inicial</string>
    <string name="plazos">Plazos</string>
    <string name="pmensual">Pago Mensual</string>
    <string name="pinicial">Pago Inicial</string>
    <string name="tfin">Total a Financiar</string>

    <!--Pre exmaen 2-->
    <string name="nomina">Cálculo de pago de Nomina</string>
    <string name="trabajador">Nombre del trabajador</string>
    <string name="numRecibo">Número del recibo: </string>
    <string name="name">Nombre: </string>
    <string name="horas">Horas Trabajadas</string>
    <string name="horasE">Horas Extras</string>
    <string name="subtotal">Subtotal</string>
    <string name="impuesto">Impuesto</string>
    <string name="totalpag">Total a Pagar</string>


    <!--Examen-->
    <string name="user">admin</string>
    <string name="pass">1234</string>
    <string name="banco">BANORTE</string>
    <string name="domiciio">Av. del Sol #34</string>

    <string-array name="movimientos">
        <item>Consultar</item>
        <item>Retirar</item>
        <item>Depositar</item>
    </string-array>

</resources>