<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="16sp"
        android:paddingRight="16sp"
        android:paddingBottom="16sp"
        android:paddingVertical="15sp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strtitulo"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:gravity="center"
            android:textStyle="bold">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/strtunombre"
            android:inputType="text"
            android:id="@+id/txtnombre">
        </EditText>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strpulsar"
            android:id="@+id/btnPulsar">
        </Button>
        <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/strlimpiar"
        android:id="@+id/btnLimpiar">
        </Button>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strcerrar"
            android:id="@+id/btnCerrar">
        </Button>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>