<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".appCotizacion">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="10sp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtCliente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10sp"
            android:text="@string/cliente"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:textSize="20sp"></TextView>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/folio"
            android:id="@+id/txtFolio">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/des"
            android:id="@+id/txtDescripcion"
            android:paddingBottom="20sp">
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/pinicial"
            android:inputType="numberDecimal"
            android:textAlignment="textEnd"
            android:id="@+id/txtPorcentaje"
            android:paddingBottom="20sp">
        </EditText>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/precio"
            android:textAlignment="textEnd"
            android:id="@+id/txtPrecio"
            android:inputType="numberDecimal">
        </EditText>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/plazos"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="@color/red"
            android:paddingBottom="20sp">
        </TextView>
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="12 meses"
                android:id="@+id/rbd12"
                android:checked="true">
            </RadioButton>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="24 meses"
                android:id="@+id/rbd24">
            </RadioButton>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="36 meses"
                android:id="@+id/rbd36">
            </RadioButton>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="48 meses"
                android:id="@+id/rbd48">
            </RadioButton>
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strCalcular"
                android:id="@+id/btnCalcular">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strlimpiar"
                android:id="@+id/btnLimpiar">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strcerrar"
                android:id="@+id/btnCerrar">
            </Button>
        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Calculos"
            android:textSize="20sp"
            android:textColor="@color/red"
            android:textAlignment="center"
            android:paddingTop="10sp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pinicial"
            android:id="@+id/txtPagoInicial"
            android:textSize="20sp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pmensual"
            android:id="@+id/txtPagoMensual"
            android:textSize="20sp">
        </TextView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tfin"
            android:id="@+id/txtTotalfin"
            android:textSize="20sp">
        </TextView>

    </LinearLayout>
</ScrollView>