<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".appIMC">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10sp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/titulo"
            android:text="@string/strIMC"
            android:textColor="@color/white"
            android:textSize="30sp"
            android:textStyle="bold"
            android:paddingBottom="10sp"
            android:paddingTop="10sp"
            android:textAlignment="center">
        </TextView>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:hint="@string/strAltura"
            android:textSize="20sp"
            android:inputType="numberDecimal"
            android:id="@+id/txtAltura">
        </EditText>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:hint="@string/strPeso"
            android:textSize="20sp"
            android:inputType="numberDecimal"
            android:id="@+id/txtPeso">
        </EditText>
        
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:paddingBottom="10sp"
            android:paddingTop="10sp"
            android:text="@string/strResultado"
            android:textColor="@color/aceptar"
            android:textSize="30sp"
            android:textAlignment="center"
            android:id="@+id/txtResultado">
        </TextView>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/image"
            android:layout_weight="1"
            android:src="@mipmap/categorias"></ImageView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="5sp"
            android:gravity="center">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strCalcular"
                android:id="@+id/btnCalcular">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strlimpiar"
                android:id="@+id/btnLimpiar">
            </Button>
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/strcerrar"
                android:id="@+id/btnCerrar">
            </Button>
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>