<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".appMonedas">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10sp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/strTituloMoneda"
            android:background="@color/titulo"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textSize="20sp"
            android:paddingTop="10sp"
            android:paddingBottom="10sp">
        </TextView>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/strCantidadP"
            android:textSize="20sp"
            android:inputType="numberDecimal"
            android:padding="10sp"
            android:id="@+id/txtCantidad">
        </EditText>

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10sp"
            android:paddingBottom="10sp"
            android:id="@+id/spnMonedas">
        </Spinner>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/strResultado"
            android:textAlignment="center"
            android:textColor="@color/aceptar"
            android:id="@+id/txtResultado">
        </TextView>
        <Space
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        </Space>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:gravity="center"
            android:padding="10sp">

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/strBtnConvertir"
                android:layout_weight="1"
                android:id="@+id/btnConvertir">
            </Button>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/strlimpiar"
                android:layout_weight="1"
                android:id="@+id/btnLimpiar">
            </Button>

            <Button
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/strcerrar"
                android:layout_weight="1"
                android:id="@+id/btnCerrar">
            </Button>


        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>