<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10sp">

        <TextView
            android:id="@+id/txtNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/nomina"
            android:textAlignment="center"/>

        <TextView
            android:id="@+id/txtRecibo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Recibo"/>

        <EditText
            android:id="@+id/txtHorasNormales"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Horas Normales"
            android:inputType="number"/>

        <EditText
            android:id="@+id/txtHorasExtra"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Horas Extra"
            android:inputType="number"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Puesto"
            android:textSize="20sp"
            android:textAlignment="center"/>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center">

            <RadioButton
                android:id="@+id/rbdAuxiliar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Auxiliar"
                android:textSize="20sp"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/rbdAlbanil"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="Albañil"/>

            <RadioButton
                android:id="@+id/rbdIng"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:text="Ing. Obra"/>

        </RadioGroup>

        <Button
            android:id="@+id/btnCalcular"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Calcular"/>

        <Button
            android:id="@+id/btnLimpiar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Limpiar"/>

        <Button
            android:id="@+id/btnCerrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Cerrar"/>

        <TextView
            android:id="@+id/txtSubtotal"
            android:layout_width="match_parent"
            android:textSize="20sp"
            android:layout_height="wrap_content"
            android:text="@string/subtotal"/>

        <TextView
            android:id="@+id/txtImpuesto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/impuesto"/>

        <TextView
            android:id="@+id/txtTotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/totalpag"/>

    </LinearLayout>

</ScrollView>